BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Account_List_Item_vod__c.object
<CustomObject>
    <description>Represents an account in an account list.</description>
    <fields>
        <fullName>Account_List_vod__c</fullName>
        <description>Account list this account list item is for.</description>
        <label>Account List</label>
        <referenceTo>Account_List_vod__c</referenceTo>
        <relationshipLabel>Account List Items</relationshipLabel>
        <relationshipName>Mapped_Accounts_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account this list item refers to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account List Items</relationshipLabel>
        <relationshipName>Mapped_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Plan_ZS_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Plan ZS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS_SHARED__c</fullName>
        <description>VPRO Dec-2013: field used to load data</description>
        <externalId>true</externalId>
        <label>BMS External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID is a unique identifier of an account list item. It is defined as the Account ID concatenated to the Account List Name.</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID is a unique identifier of an account list item. It is defined as the Account ID concatenated to the Account List Name.</inlineHelpText>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Internal field for use during synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Customer List Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ALI{000000000}</displayFormat>
        <label>Account List Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer List Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>